fixed spacing of nav bar on smaller desktop screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,14 +28,13 @@
 to use, enter 	
 <div class="rectangle"></div></br></br>
  */
-.rectangle {
-    left: 10%;
-    width:100%;
-    height:0.25%;
-    z-index: 2;
-   	background: linear-gradient (0.25turn, #a61215, #e1532b, #e2870e, #cda142, #506449, #3f41a3, #351f4d);
-	/*background: linear-gradient(0.25turn, #fed0db, #fdd3d3, #fedad8, #ffe5dd, #ffeadc, #ffefd9, #fff2db, #fff5dd, #f2f0e0, #e6eae4, #e1e3f0, #ddddf9, #e0dcf1, #e0dcf1, #dacde4);*/
-}
+#rectangle {
+		  height: 0.15%;
+		 /* top: 90%; */
+		  width: 100%;
+		  position: fixed;
+		  background: linear-gradient(0.25turn, #990000, #cc6633, #cc9900, #cc9933, #666633, #333399, #333366);
+		}
 
 
 @font-face {
@@ -385,42 +384,42 @@ iframe {
 				    overflow: hidden;
 				}
 
-				#header_exhibitions
-				        {
-				    position: fixed;
-				    top: 2%;
-				    left: 39%;
-				    width:56%;
-				    height:20%;
-				    z-index: 2;
-				    display: block;
-				    overflow: hidden;
-				}
+		#header_exhibitions
+		        {
+		    position: fixed;
+		    top: 2%;
+		    left: 41.5%;
+		    width:56%;
+		    height:20%;
+		    z-index: 2;
+		    display: block;
+		    overflow: hidden;
+		}
 
-				#header_artists
-				        {
-				    position: fixed;
-				    top: 2%;
-				    left: 57%;
-				    width:56%;
-				    height:20%;
-				    z-index: 2;
-				    display: block;
-				    overflow: hidden;
-				}
+		#header_artists
+		        {
+		    position: fixed;
+		    top: 2%;
+		    left: 64%;
+		    width:56%;
+		    height:20%;
+		    z-index: 2;
+		    display: block;
+		    overflow: hidden;
+		}
 
-				#header_info
-				        {
-				    position: fixed;
-				    text-justify: right;
-				    top: 2%;
-				    left: 75%;
-				    width:56%;
-				    height:20%;
-				    z-index: 2;
-				    display: block;
-				    overflow: hidden;
-				}
+		#header_info
+		        {
+		    position: fixed;
+		    text-justify: right;
+		    top: 2%;
+		    left: 83.5%;
+		    width:56%;
+		    height:20%;
+		    z-index: 2;
+		    display: block;
+		    overflow: hidden;
+		}
 
 				#comingsoon
 				 		{
@@ -950,7 +949,7 @@ iframe {
 		        {
 		    position: fixed;
 		    top: 0%;
-		    left: 39%;
+		    left: 41.5%;
 		    width:56%;
 		    height:20%;
 		    z-index: 2;
@@ -962,7 +961,7 @@ iframe {
 		        {
 		    position: fixed;
 		    top: 0%;
-		    left: 57%;
+		    left: 64%;
 		    width:56%;
 		    height:20%;
 		    z-index: 2;
@@ -975,7 +974,7 @@ iframe {
 		    position: fixed;
 		    text-justify: right;
 		    top: 0%;
-		    left: 75%;
+		    left: 83.5%;
 		    width:56%;
 		    height:20%;
 		    z-index: 2;
